# simple-lib

./: .gitignore  CMakeLists.txt  LICENSE
SimpleLibDll/: CMakeLists.txt
SimpleLibDll/cmake/: Config.cmake.in
SimpleLibDll/include/: SimpleLibDll.h  export.h
SimpleLibDll/src/: SimpleLibDll.cpp
